; ModuleID = '/home/carl/AnghaBench/zfs/cmd/zfs/extr_zfs_main.c_zfs_mount_and_share.c'
source_filename = "/home/carl/AnghaBench/zfs/cmd/zfs/extr_zfs_main.c_zfs_mount_and_share.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@ZFS_TYPE_VOLUME = common dso_local global i64 0, align 8
@ZFS_PROP_CANMOUNT = common dso_local global i32 0, align 4
@B_FALSE = common dso_local global i32 0, align 4
@ZFS_CANMOUNT_ON = common dso_local global i64 0, align 8
@stderr = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [69 x i8] c"filesystem successfully created, but it may only be mounted by root\0A\00", align 1
@.str.1 = private unnamed_addr constant [50 x i8] c"filesystem successfully created, but not mounted\0A\00", align 1
@.str.2 = private unnamed_addr constant [49 x i8] c"filesystem successfully created, but not shared\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i8*, i32)* @zfs_mount_and_share to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @zfs_mount_and_share(i32* %0, i8* %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32*, align 8
  %9 = alloca i32, align 4
  store i32* %0, i32** %5, align 8
  store i8* %1, i8** %6, align 8
  store i32 %2, i32* %7, align 4
  store i32* null, i32** %8, align 8
  store i32 0, i32* %9, align 4
  %10 = load i32*, i32** %5, align 8
  %11 = load i8*, i8** %6, align 8
  %12 = load i32, i32* %7, align 4
  %13 = call i32* @zfs_open(i32* %10, i8* %11, i32 %12)
  store i32* %13, i32** %8, align 8
  %14 = load i32*, i32** %8, align 8
  %15 = icmp eq i32* %14, null
  br i1 %15, label %16, label %17

16:                                               ; preds = %3
  store i32 1, i32* %4, align 4
  br label %67

17:                                               ; preds = %3
  %18 = load i32*, i32** %8, align 8
  %19 = call i64 @zfs_get_type(i32* %18)
  %20 = load i64, i64* @ZFS_TYPE_VOLUME, align 8
  %21 = icmp eq i64 %19, %20
  br i1 %21, label %22, label %25

22:                                               ; preds = %17
  %23 = load i32*, i32** %8, align 8
  %24 = call i32 @zfs_close(i32* %23)
  store i32 0, i32* %4, align 4
  br label %67

25:                                               ; preds = %17
  %26 = load i32, i32* @ZFS_PROP_CANMOUNT, align 4
  %27 = load i32, i32* %7, align 4
  %28 = load i32, i32* @B_FALSE, align 4
  %29 = call i64 @zfs_prop_valid_for_type(i32 %26, i32 %27, i32 %28)
  %30 = icmp ne i64 %29, 0
  br i1 %30, label %31, label %63

31:                                               ; preds = %25
  %32 = load i32*, i32** %8, align 8
  %33 = load i32, i32* @ZFS_PROP_CANMOUNT, align 4
  %34 = call i64 @zfs_prop_get_int(i32* %32, i32 %33)
  %35 = load i64, i64* @ZFS_CANMOUNT_ON, align 8
  %36 = icmp eq i64 %34, %35
  br i1 %36, label %37, label %63

37:                                               ; preds = %31
  %38 = call i64 (...) @geteuid()
  %39 = icmp ne i64 %38, 0
  br i1 %39, label %40, label %44

40:                                               ; preds = %37
  %41 = load i32, i32* @stderr, align 4
  %42 = call i8* @gettext(i8* getelementptr inbounds ([69 x i8], [69 x i8]* @.str, i64 0, i64 0))
  %43 = call i32 @fprintf(i32 %41, i8* %42)
  store i32 1, i32* %9, align 4
  br label %62

44:                                               ; preds = %37
  %45 = load i32*, i32** %8, align 8
  %46 = call i64 @zfs_mount(i32* %45, i32* null, i32 0)
  %47 = icmp ne i64 %46, 0
  br i1 %47, label %48, label %52

48:                                               ; preds = %44
  %49 = load i32, i32* @stderr, align 4
  %50 = call i8* @gettext(i8* getelementptr inbounds ([50 x i8], [50 x i8]* @.str.1, i64 0, i64 0))
  %51 = call i32 @fprintf(i32 %49, i8* %50)
  store i32 1, i32* %9, align 4
  br label %61

52:                                               ; preds = %44
  %53 = load i32*, i32** %8, align 8
  %54 = call i64 @zfs_share(i32* %53)
  %55 = icmp ne i64 %54, 0
  br i1 %55, label %56, label %60

56:                                               ; preds = %52
  %57 = load i32, i32* @stderr, align 4
  %58 = call i8* @gettext(i8* getelementptr inbounds ([49 x i8], [49 x i8]* @.str.2, i64 0, i64 0))
  %59 = call i32 @fprintf(i32 %57, i8* %58)
  store i32 1, i32* %9, align 4
  br label %60

60:                                               ; preds = %56, %52
  br label %61

61:                                               ; preds = %60, %48
  br label %62

62:                                               ; preds = %61, %40
  br label %63

63:                                               ; preds = %62, %31, %25
  %64 = load i32*, i32** %8, align 8
  %65 = call i32 @zfs_close(i32* %64)
  %66 = load i32, i32* %9, align 4
  store i32 %66, i32* %4, align 4
  br label %67

67:                                               ; preds = %63, %22, %16
  %68 = load i32, i32* %4, align 4
  ret i32 %68
}

declare dso_local i32* @zfs_open(i32*, i8*, i32) #1

declare dso_local i64 @zfs_get_type(i32*) #1

declare dso_local i32 @zfs_close(i32*) #1

declare dso_local i64 @zfs_prop_valid_for_type(i32, i32, i32) #1

declare dso_local i64 @zfs_prop_get_int(i32*, i32) #1

declare dso_local i64 @geteuid(...) #1

declare dso_local i32 @fprintf(i32, i8*) #1

declare dso_local i8* @gettext(i8*) #1

declare dso_local i64 @zfs_mount(i32*, i32*, i32) #1

declare dso_local i64 @zfs_share(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
